# stranger-code

./: .gitignore  README.md  collections_examples.py  pyproject.toml
stranger_code/: __init__.py  __main__.py  _compat.py  _version.py  agent.py  app.py  app.tcss  clipboard.py  config.py  default_agent_prompt.md  file_ops.py  main.py  sessions.py  shell.py  textual_adapter.py  tools.py  ui.py
stranger_code/integrations/: sandbox_factory.py
stranger_code/prompts/: barb.md  dustin.md  eleven.md  hopper.md  vecna.md
stranger_code/skills/: __init__.py  commands.py
stranger_code/widgets/: __init__.py  approval.py  autocomplete.py  chat_input.py  christmas.py  loading.py  messages.py  particles.py  splash.py  status.py  tool_renderers.py  welcome.py
