[project]
name = "stranger-code"
version = "0.1.0"
description = "Stranger Code - A Stranger Things themed AI coding agent CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
  # Core: deepagents-cli provides most functionality
  "deepagents-cli>=0.0.12",
  # Textual TUI (stranger-code's unique addition)
  "textual>=1.0.0",
  "textual-autocomplete>=3.0.0",
  # Session persistence
  "langgraph-checkpoint-sqlite>=2.0.0,<3.0.0",
  "aiosqlite>=0.19.0",
]

[project.scripts]
stranger-code = "stranger_code:cli_main"
stranger = "stranger_code:cli_main"

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "responses>=0.25.0",
    "ruff>=0.9.7",
]


dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "langchain-openai",
    "pytest-timeout>=2.4.0",
    "pytest-socket>=0.7.0",
    "pytest-asyncio>=1.2.0",
]

lint = [
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
stranger_code = ["default_agent_prompt.md", "app.tcss", "prompts/*.md"]

[tool.ruff]
line-length = 100
exclude = []

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "COM812",
    "ISC001",
    "PERF203",
    "SLF001",
    "PLC0415",
    "PLR0913",
    "PLC0414",
    "C901",
]
unfixable = ["B028"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"stranger_code/cli.py" = [
    "T201",
]
"tests/*" = [
    "D1",
    "S101",
    "S311",
    "ANN201",
    "INP001",
    "PLR2004",
]

[tool.pytest.ini_options]
timeout = 10

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = ["deprecated"]
disallow_any_generics = false
warn_return_any = false
